ajout des differentes regles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=reglegestion
 
-server.port=8092
+server.port=8093
 
-spring.datasource.url=jdbc:mysql://localhost:3306/service?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/reglegestion?useSSL=false&serverTimezone=UTC
 
 # Nom d'utilisateur MySQL
 spring.datasource.username=root
